arreglo archivo maven v1.1

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,9 @@
 name: Integracion Countinua con GitHub Actions
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
   pull_request:
-    branches:
-      - master
+    branches: [ "master" ]
 jobs:
   test_build:
     runs-on: ubuntu-latest
