--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version> <!-- o la versión que estés usando -->
+				<version>3.0.0-M5</version> <!-- o la versión que estés usando -->
 				<configuration>
 					<argLine>-Xshare:off</argLine>
 					<forkCount>0</forkCount>
