--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,10 @@
 				<version>3.0.0-M5</version> <!-- o la versión que estés usando -->
 				<configuration>
 					<argLine>-Xshare:off</argLine>
-					<forkCount>0</forkCount>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 
 			</plugin>
